// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar accepts and passes through additional props with ScrollableTabView 1`] = `
<View
  testID="scrollable-tab-view"
>
  <View
    activeTab={0}
    containerWidth={300}
    goToPage={[MockFunction]}
    scrollValue={0}
    style={
      [
        {
          "backgroundColor": "blue",
          "flexDirection": "row",
          "height": 50,
        },
        [
          {
            "borderBottomColor": "#b7bbc866",
            "borderBottomWidth": 1,
            "borderColor": "#ffffff",
          },
          undefined,
        ],
      ]
    }
    tabs={
      [
        "Tab 1",
        "Tab 2",
      ]
    }
  />
  <View
    tabLabel="Tab 1"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 1
       Content
    </Text>
  </View>
  <View
    tabLabel="Tab 2"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 2
       Content
    </Text>
  </View>
</View>
`;

exports[`TabBar renders correctly with ScrollableTabView 1`] = `
<View
  testID="scrollable-tab-view"
>
  <View
    activeTab={0}
    containerWidth={300}
    goToPage={[MockFunction]}
    scrollValue={0}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "height": 50,
        },
        [
          {
            "borderBottomColor": "#b7bbc866",
            "borderBottomWidth": 1,
            "borderColor": "#ffffff",
          },
          undefined,
        ],
      ]
    }
    tabs={
      [
        "Tab 1",
        "Tab 2",
      ]
    }
  />
  <View
    tabLabel="Tab 1"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 1
       Content
    </Text>
  </View>
  <View
    tabLabel="Tab 2"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 2
       Content
    </Text>
  </View>
</View>
`;

exports[`TabBar renders correctly with custom style using ScrollableTabView 1`] = `
<View
  testID="scrollable-tab-view"
>
  <View
    activeTab={0}
    containerWidth={300}
    goToPage={[MockFunction]}
    scrollValue={0}
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "height": 50,
        },
        [
          {
            "borderBottomColor": "#b7bbc866",
            "borderBottomWidth": 1,
            "borderColor": "#ffffff",
          },
          {
            "backgroundColor": "red",
          },
        ],
      ]
    }
    tabs={
      [
        "Tab 1",
        "Tab 2",
      ]
    }
  />
  <View
    tabLabel="Tab 1"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 1
       Content
    </Text>
  </View>
  <View
    tabLabel="Tab 2"
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Tab 2
       Content
    </Text>
  </View>
</View>
`;
